packages/frontend/components/Navigation/Navigation.module.scss
@import 'styles/variables';
@import url('https://fonts.googleapis.com/css2?family=K2D:ital,wght@1,300&display=swap');

.navigation {
  background-image: url('/navigation/sakura-trees.png'); /* Got permission for it, https://www.pixiv.net/en/artworks/26394050 */
  background-position: bottom center;
  background-repeat: no-repeat;
  background-size: cover;

  margin-bottom: 10rem;

  box-shadow: 0px 10px 20px #000000;

  position: relative; /* To contain Particles just in this screen */
  color: $white;
  width: 100%;
  height: calc(100vw * 9 / 16);

  @media (orientation: landscape) {
    height: 100vh;
  }

  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 3fr;
  grid-template-areas:
    'name  navbar'
    'title image';

  .name {
    z-index: 1;
    grid-area: name;
    justify-self: left;

    img {
      height: 10rem;
    }

    p {
      position: absolute;
      top: 1.5rem;
      left: 1.5rem;
      fill: $white;
      font-size: 3em;
      transform: rotate(-11.97deg);
    }
  }

  .navigators {
    position: relative;
    z-index: 1;

    .navbar {
      position: absolute;
      height: 8rem;
      top: 0;
      right: 0;
    }

    .icons {
      position: absolute;
      display: flex;
      justify-content: space-between;

      width: 24rem;
      height: 2.5rem;
      top: 1rem;
      right: 2rem;

      .icon {
        display: flex;
        flex-direction: column;
        justify-items: center;
        align-items: center;
        cursor: pointer;

        img {
          height: 2.5rem;
          transition: opacity 100ms ease-in;
        }

        .active {
          height: 0.5rem;
          color: $white;
          border-radius: 100%;
        }

        .icon_text{
          position: absolute;
          height: max-content;
          width: max-content;
          top: 0.5rem;
          opacity: 0;
          transition: opacity 100ms ease-in;
        }
      }
      
      .icon:hover{
        img{
          opacity: 0;
        }

        .active, .icon_text{
          opacity: 1;
        }
      }
    }
  }

  .title {
    grid-area: title;
    display: flex;
    margin-top: 20vh;
    margin-left: 10rem;

    .box {
      background-image: url('/navigation/Title.svg');
      background-repeat: no-repeat;
      width: 80vw;
      height: 40rem;
      background-size: 34rem auto;
  
      p {
        position: static;
        margin-top: 1.2em;
        margin-left: 1em;
        font-size: 2.5rem;
      }
    }
  }
}

@media only screen and (max-width: $breakpoint-tablet) {
  .navigation {
    height: 90vh;

    .name {
      display: none;
    }

    .navigators {
      width: 100vw;
    }

    .title {
      justify-content: center;
      margin-left: 0;

      .box {
        height: auto;
        background-size: 80vw auto;
  
        p {
          font-size: 6vw;
        }
      }
    }
  }
}

@media only screen and (max-width: $breakpoint-phone) {
  .navigation {
    height: 90vh;

    .name {
      display: none;
    }

    .navigators {

      .navbar {
        grid-area: navbar;
        width: 100vw;
        height: auto;
      }

      .icons {
        width: 70vw;
        top: 1.5vh;
        right: 1rem;

        .icon {
          img {
            height: 5vh;
          }
        }

        .icon_text {
          font-size: 0.7em;
        }
      }
    }

    .title {
      .box {
        width:90vw;
        background-size: 90vw auto;
      }
    }
  }
}

